# full-text-rs

./: Cargo.toml  Dockerfile  Readme.org
example/: config.toml
src/: cli.rs  config.rs  feeds.rs  main.rs  webserver.rs
