[package]
name = "full-text-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
article_scraper = "2.1.2"
async-trait = "0.1.86"
atom_syndication = "0.12.6"
axum = { version = "0.8.1", features = ["macros"] }
bytes = "1.10.0"
confique = { version = "0.3.0", features = ["toml"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
log = "0.4.25"
pathetic = "0.3.0"
quick-xml = "0.37.2"
reqwest = "0.12.12"
rss = "2.0.11"
serde = "1.0.217"
stderrlog = "0.6.0"
structopt = "0.3.26"
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tokio-listener = { version = "0.5.0", features = ["serde", "axum08"] }
url = "2.5.4"
