[package]
name = "full-text-rs"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
article_scraper = "2.1.4"
async-trait = "0.1.88"
atom_syndication = "0.12.7"
axum = { version = "0.8.4", features = ["macros"] }
bytes = "1.10.1"
confique = { version = "0.3.0", features = ["toml"] }
derive_more = { version = "2.0.1", features = ["full"] }
futures = "0.3.31"
log = "0.4.27"
pathetic = "0.3.0"
quick-xml = "0.38.0"
reqwest = "0.12.22"
rss = "2.0.12"
serde = "1.0.224"
stderrlog = "0.6.0"
structopt = "0.3.26"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
tokio-listener = { version = "0.5.1", features = ["serde", "axum08"] }
url = "2.5.4"
